# shruggie-md

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  index.html  package.json  pnpm-lock.yaml  shruggie-md-spec.md  shruggie-md.code-workspace  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.extension.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.handoff/plans/: 20260324-001-Brainstorm.md  20260324-002-shruggie-md-spec.md  20260325-001-Updates.md  20260325-002-Updates.md  20260325-003-Updates.md  20260327-001-Updates.md  20260327-002-Updates.md  20260328-001-Updates.md  20260328-002-Updates.md  20260329-001-Updates.md  20260329-002-Updates.md  20260331-001-Updates.md  20260410-001-Updates-Brainstorm.md  20260410-001-Updates.md
.handoff/reports/: 20260325-001-Report.md  20260325-002-Report.md  20260325-003-Report.md  20260327-001-Report.md  20260327-002-Report.md  20260328-001-Report.md  20260329-001-Report.md  20260329-002-Report.md  20260410-001-Report.md
extension/: content.ts  manifest.json  popup.html  popup.ts
public/: manifest.json
scripts/: build.ps1  build.sh  bump-version.ps1  bump-version.sh  clean.ps1  clean.sh  copy-extension-assets.js  dev.ps1  dev.sh  generate-icons.ps1  generate-icons.sh  rebuild.ps1  rebuild.sh  test.ps1  test.sh  typecheck.ps1  typecheck.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/__tests__/: config.test.tsx  (+16 more)
(+91 files in other folders)
